# mrmr

./: .gitignore  README.md  pyproject.toml
mrmr/: __init__.py
tests/: test_consistency.py
